@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.9.2
-Date: ????
-  Changes:
+Date: 2024-01-16
+  Bugfixes:
+    - Fixed bug where trying to load the game without Loader Redux would cause an error
 ---------------------------------------------------------------------------------------------------
 Version: 0.9.1
 Date: 2024-01-16
